--- a/src/main/resources/toserve/css/eschool.css
+++ b/src/main/resources/toserve/css/eschool.css
@@ -97,3 +97,20 @@ img.logo{
     padding:1px 2px;
     overflow:auto;
 }
+
+#errors{
+    width:788px;
+    margin:0;
+    padding:0px;
+    float:left;
+    margin-bottom:5px;
+}
+
+#errorIcon{
+    float:left;
+    margin-right:2em;
+}
+
+ul.errorList{
+    list-style-type:none;
+}
