Updated to work with IE 9

--- a/src/main/resources/toserve/css/eschool.css
+++ b/src/main/resources/toserve/css/eschool.css
@@ -87,6 +87,12 @@ div.NavBar{
 
 img.logo{
     margin-top:13px;
+    border-style:none;
+}
+
+.logoLink{
+    text-decoration:none;
+    border-style:none;
 }
 
 #navTree{
