--- a/src/main/resources/toserve/css/eschool.css
+++ b/src/main/resources/toserve/css/eschool.css
@@ -4,6 +4,22 @@ background-color:white;
 repeat-x;
 }
 
+td{
+    padding-right:15px;
+    padding-left:0;
+    padding-top:2px;
+    padding-bottom:2px;
+    text-align:left;
+}
+
+th{
+    text-align:left;
+    padding-right:15px;
+    padding-left:0;
+    padding-top:2px;
+    padding-bottom:2px;
+}
+
 .edit_error_class {
   display: block;
   color: red;
