--- a/src/main/resources/toserve/css/eschool.css
+++ b/src/main/resources/toserve/css/eschool.css
@@ -86,7 +86,8 @@ div.NavBar{
 
 #leftBar{
     width:150px;
-    height:800px;
+    height:auto;
+    min-height:400px;
     margin:0;
     padding-top:0;
     padding-bottom:0;
@@ -134,6 +135,16 @@ img.logo{
 #errorIcon{
     float:left;
     margin-right:2em;
+}
+
+#fieldErrorIcon{
+    float:left;
+    margin-right:8px;
+}
+
+#fieldError{
+    padding:2px;
+    margin:0;
 }
 
 ul.errorList{
